--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Swadeshi movement</title>
 </head>
 <body>
+    <div class="logo">Swadeshi movement</div>
     <div class="index">
-    <!--<label class="logo">Swadeshi movement</label>-->
+    
     <ul>
-        <li class="active"><a href="#">Home</a></li>
+        <li class="act"><a href="#">Home</a></li>
         <li ><a href="#">Timeline</a></li>
         <li><a href="#">Imporant Persons</a></li>
         <li><a href="#">Relations</a></li>
