--- a/index.html
+++ b/index.html
@@ -6,16 +6,39 @@
 </head>
 <body>
     <div class="logo">Swadeshi movement</div>
-    <div class="index">
+    <div class="main">
     
-    <ul>
-        <li class="act"><a href="#">Home</a></li>
-        <li ><a href="#">Timeline</a></li>
-        <li><a href="#">Imporant Persons</a></li>
-        <li><a href="#">Relations</a></li>
-        <li><a href="#">Make In India</a></li>
+    <ul class="l1">
+        <li class="active"><a href="#">Introduction</a>
+        <div class="subm">
+            <ul>
+                <li><a href="#"> Indian Independence movement</a></li>
+            </ul>
+        </div>
+    </li>
+        <li ><a href="timeline.html">Background</a></li>
+        <li><a href="people.html">Legacies</a></li>
+        <li><a href="mki.html">Make In India</a></li>
+        <li><a href="relations.html">References</a></li>
     </ul>
     </div>
+    <h1 style="text-align: center; color: brown;">Introduction</h1><br>
+    <p>
+        The Swadeshi movement was the part of Indian independence movement and contributed to the development of Indian nationalism. It was begined with the partition of bengal.
+    </p><br>
+    <h2 style="text-align: center;">Indian Independence Movement</h2>
+    <hr><img src="swadeshi.jpg" alt="movement" id="gandhi"><br>
+    <p>The Indian Independence Movement was a series of historic events with the ultimate aim of ending the British rule in India. The movement spanned from 1857 to 1947.
+        <p>The first nationalistic revolutionary movement for Indian independence emerged from Bengal.</p>
+        <p>It later took root in the newly formed Indian National Congress with prominent moderate leaders seeking only their fundamental right to appear for Indian Civil Service examinations in British India, as well as more rights (economical in nature), for the people of the soil. </p>
+         <p>The early part of the 20th century saw a more radical approach towards political self-rule proposed by leaders such as the Lal, Bal, Pal triumvirate, and Aurobindo Ghosh, V. O. Chidambaram Pillai.</p>
+        <p>The last stages of the self-rule struggle from the 1920s was characterized by Congress's adoption of Mohandas Karamchand Gandhi's policy of non-violence and civil disobedience, and several other campaigns.</p>
+        <p>Nationalists like Subhash Chandra Bose, Bhagat Singh, Bagha Jatin, Surya Sen preached armed revolution to achieve self-rule.</p>
+        <p> Poets and writers such as Rabindranath Tagore, Subramania Bharati, Bankim Chandra Chattopadhyay and Kazi Nazrul Islam used literature, poetry, and speech as a tool for political awareness.</p>
+        <p>Feminists like Sarojini Naidu, Pritilata Waddedar, Begum Rokeya promoted the emancipation of Indian women and their participation in national politics.</p>
+        <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
+        <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
+</p>
     
 </body>
 </html>
