--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Swadeshi movement</title>
 </head>
@@ -11,7 +12,7 @@
     <ul class="l1">
         <li class="active"><a href="#">Introduction</a>
         <div class="subm">
-            <ul>
+            <ul class="l1">
                 <li><a href="#"> Indian Independence movement</a></li>
             </ul>
         </div>
@@ -28,7 +29,7 @@
     </p><br>
     <h2 style="text-align: center;">Indian Independence Movement</h2>
     <hr><img src="swadeshi.jpg" alt="movement" id="gandhi"><br>
-    <p>The Indian Independence Movement was a series of historic events with the ultimate aim of ending the British rule in India. The movement spanned from 1857 to 1947.
+    <p>The Indian Independence Movement was a series of historic events with the ultimate aim of ending the British rule in India. The movement spanned from 1857 to 1947.</p>
         <p>The first nationalistic revolutionary movement for Indian independence emerged from Bengal.</p>
         <p>It later took root in the newly formed Indian National Congress with prominent moderate leaders seeking only their fundamental right to appear for Indian Civil Service examinations in British India, as well as more rights (economical in nature), for the people of the soil. </p>
          <p>The early part of the 20th century saw a more radical approach towards political self-rule proposed by leaders such as the Lal, Bal, Pal triumvirate, and Aurobindo Ghosh, V. O. Chidambaram Pillai.</p>
@@ -38,7 +39,7 @@
         <p>Feminists like Sarojini Naidu, Pritilata Waddedar, Begum Rokeya promoted the emancipation of Indian women and their participation in national politics.</p>
         <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
         <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
-</p>
+        
     
 </body>
 </html>
