--- a/people.html
+++ b/people.html
@@ -8,12 +8,12 @@
     <div class="logo">Swadeshi movement</div>
     <div class="main">
     
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="timeline.html">Timeline</a></li>
-        <li class="active"><a href="#">Imporant Persons</a></li>
-        <li><a href="relations.html">Relations</a></li>
+    <ul class="l1">
+        <li><a href="index.html">Introduction</a></li>
+        <li><a href="timeline.html">Background</a></li>
+        <li class="active"><a href="#">Legacies</a></li>
         <li><a href="mki.html">Make In India</a></li>
+        <li><a href="relations.html">References</a></li>
     </ul>
     </div>
     
