--- a/relations.html
+++ b/relations.html
@@ -8,14 +8,13 @@
     <div class="logo">Swadeshi movement</div>
     <div class="main">
     
-    <ul>
-        <li class="act"><a href="index.html">Home</a></li>
-        <li ><a href="timeline.html">Timeline</a></li>
-        <li><a href="people.html">Imporant Persons</a></li>
-        <li class="active"><a href="#">Relations</a></li>
+    <ul class="l1">
+        <li><a href="index.html">Introduction</a></li>
+        <li ><a href="timeline.html">Background</a></li>
+        <li><a href="people.html">Legacies</a></li>
         <li><a href="mki.html">Make In India</a></li>
+        <li class="active"><a href="#">References</a></li>
     </ul>
     </div>
-    
 </body>
 </html>
