--- a/bal.html
+++ b/bal.html
@@ -50,15 +50,17 @@
     <p>Tilak joined the Indian National Congress in 1890.</p>
     <p>He opposed its moderate attitude, especially towards the fight for self-government. He was one of the most-eminent radicals at the time.</p>
     <p>In fact, it was the Swadeshi movement of 1905–1907 that resulted in the split within the Indian National Congress into the Moderates and the Extremists.</p>
-    <h3 style="font-size: 20px;">Activities</h3>
-    <p style="margin-left: 40px;">----------------------------------------------------------------------------</p>
-    <p>In 1899, Gokhale was elected to the Bombay Legislative Council.</p>
-    <p>He was elected to the Imperial Council of the Governor-General of India on 20 December 1901.</p>
-    <p>Again on 22 May 1903 as non-officiating member representing Bombay Province.</p>
-    <p style="margin-left: 40px;">----------------------------------------------------------------------------</p>
-    <p>The empirical knowledge coupled with the experience of the representative institutions made Gokhale an outstanding political leader, moderate in ideology and advocacy, a model for the people's representatives.</p>
-    <p>His contribution was monumental in shaping the Indian freedom struggle into a quest for building an open society and egalitarian nation.</p>
-    <p>Gokhale's achievement must be studied in the context of predominant ideologies and social, economic and political situation at that time, particularly in reference to the famines, revenue policies, wars, partition of Bengal, Muslim League and the split in the Congress at Surat.</p>
+    <p>Tilak was charged with incitement to murder and sentenced to 18 months imprisonment. When he emerged from prison in present-day Mumbai, he was revered as a martyr and a national hero.</p>
+    
+    <h3 style="font-size: 20px;">Social Contributions</h3><hr>
+    <p>Tilak started two weeklies, Kesari ("The Lion") in Marathi and Mahratta in English (sometimes referred as 'Maratha' in Academic Study Books) in 1880–81 with Gopal Ganesh Agarkar as the first editor.</p>
+    <p>By this he was recognized as 'awakener of India', as Kesari later became a daily and continues publication to this day.</p>
+    <p>In 1894, Tilak transformed the household worshipping of Ganesha into a grand public event (Sarvajanik Ganeshotsav).</p>
+    <p>The celebrations consisted of several days of processions, music, and food.</p>
+    <p>They were organized by the means of subscriptions by neighbourhood, caste, or occupation. Students often would celebrate Hindu and national glory and address political issues; including patronage of Swadeshi goods.</p>
+    <p>In 1895, Tilak founded the Shri Shivaji Fund Committee for the celebration of "Shiv Jayanti", the birth anniversary of Shivaji, the founder of the Maratha Empire. </p>
+    <p>The project also had the objective of funding the reconstruction of the tomb (Samadhi) of Shivaji at Raigad Fort.</p>
+    <p>For this second objective, Tilak established the Shri Shivaji Raigad Smarak Mandal along with Senapati Khanderao Dabhade II of Talegaon Dabhade, who became the founder President of the Mandal.</p>
 </body>
 </html>
-During late 1896, a bubonic plague spread from Bombay to Pune, and by January 1897, it reached epidemic proportions. British troops were brought in to deal with the emergency and harsh measures were employed including forced entry into private houses, the examination of occupants, evacuation to hospitals and segregation camps, removing and destroying personal possessions, and preventing patients from entering or leaving the city. By the end of May, the epidemic was under control. They were widely regarded as acts of tyranny and oppression. Tilak took up this issue by publishing inflammatory articles in his paper Kesari (Kesari was written in Marathi, and "Maratha" was written in English), quoting the Hindu scripture, the Bhagavad Gita, to say that no blame could be attached to anyone who killed an oppressor without any thought of reward. Following this, on 22 June 1897, Commissioner Rand and another British officer, Lt. Ayerst were shot and killed by the Chapekar brothers and their other associates. According to Barbara and Thomas R. Metcalf, Tilak "almost surely concealed the identities of the perpetrators".[14] Tilak was charged with incitement to murder and sentenced to 18 months imprisonment. When he emerged from prison in present-day Mumbai, he was revered as a martyr and a national hero.[15] He adopted a new slogan coined by his associate Kaka Baptista: "Swaraj (self-rule) is my birthright and I shall have it."[16]
+ 
