--- a/timeline.html
+++ b/timeline.html
@@ -21,30 +21,28 @@
             </div>
         </li>
 
-        <li><a href="people.html">Legacies</a></li>
+        <li><a href="people.html">Legacy & Influence</a></li>
         <li><a href="mki.html">Make In India</a></li>
         <li><a href="relations.html">References</a></li>
     </ul>
     </div>
-    <h1>Introduction</h1><hr>
-    <p>The Swadeshi movement was the part of Indian independence movement and contributed to the development of Indian nationalism. It was begined with the partition of bengal.</p>
-    <h2>Etymology</h2><hr>
-    <p>The word Swadeshi was derived from sanskrit word "Swa" means self and "adesh" means rule. Self rule is main agenda of this swadeshi movement.</p>
-    <h2>History</h2><hr>
-    <p><strong>1850 to 1904:</strong>Developed by leaders like <Strong>Dadabhai Naoroji, Gopala krishna Gokhale, Bal Gangadhar Thilak</Strong>. This was also known as the first Swadeshi Movement.</p>
+    <br><h2>History</h2><hr>
+    <p style="padding-top: 10px;"><strong>1850 to 1904:</strong>Developed by leaders like <Strong>Dadabhai Naoroji, Gopala krishna Gokhale, Bal Gangadhar Thilak</Strong>. This was also known as the first Swadeshi Movement.</p>
     <p><strong>1905 to 1917:</strong>Began in 1905, against the<strong> partition of bengal</strong> ordered by lord curzon.</p>
     <p><strong>1918 to 1947:</strong> The idea of swadeshi was further shaped by <strong>Gandhi</strong>, leading to the Independence of India from British rule.</p>
     <p><strong>Till 1991:</strong> Widespread curbs on international andion of the obselete technology druing the <strong>license-permit raj</strong></p>
     <p><strong>From 1991:</strong> Begining of liberalization, privatization, and globalization in independent india. Foreign capitals, technologies and many other goods were not excluded and doctrine of export led growth resulted in modern industrialism.</p>
-    <h2>Indian Independence movement</h2>
-    <hr><img src="swadeshi.jpg" alt="movement" id="gandhi"><br>
+    
+    <br><h2>Indian Independence movement</h2><hr>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RoUAdTocj0E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin-left: 100px; margin-top: 10px; padding-right: 10px; float: left;"></iframe>
     <p>The Indian Independence Movement was a series of historic events with the ultimate aim of ending the British rule in India. The movement spanned from 1857 to 1947.</p>
         <p>The first nationalistic revolutionary movement for Indian independence emerged from Bengal.</p>
         <p>It later took root in the newly formed Indian National Congress with prominent moderate leaders seeking only their fundamental right to appear for Indian Civil Service examinations in British India, as well as more rights (economical in nature), for the people of the soil. </p>
          <p>The early part of the 20th century saw a more radical approach towards political self-rule proposed by leaders such as the Lal, Bal, Pal triumvirate, and Aurobindo Ghosh, V. O. Chidambaram Pillai.</p>
-        <p>The last stages of the self-rule struggle from the 1920s was characterized by Congress's adoption of Mohandas Karamchand Gandhi's policy of non-violence and civil disobedience, and several other campaigns.</p>
+         <p>The last stages of the self-rule struggle from the 1920s was characterized by Congress's adoption of Mohandas Karamchand Gandhi's policy of non-violence and civil disobedience, and several other campaigns.</p>
         <p>Nationalists like Subhash Chandra Bose, Bhagat Singh, Bagha Jatin, Surya Sen preached armed revolution to achieve self-rule.</p>
         <p> Poets and writers such as Rabindranath Tagore, Subramania Bharati, Bankim Chandra Chattopadhyay and Kazi Nazrul Islam used literature, poetry, and speech as a tool for political awareness.</p>
+        <img src="swadeshi.jpg" alt="movement" id="gandhi" style="width: 400px;padding-right: 20px;"><br>
         <p>Feminists like Sarojini Naidu, Pritilata Waddedar, Begum Rokeya promoted the emancipation of Indian women and their participation in national politics.</p>
         <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
         <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
