--- a/relations.html
+++ b/relations.html
@@ -10,8 +10,17 @@
     
     <ul class="l1">
         <li><a href="index.html">Introduction</a></li>
-        <li ><a href="timeline.html">Background</a></li>
-        <li><a href="people.html">Legacies</a></li>
+        <li ><a href="timeline.html">Background</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="dada.html" title="Dadabhai Naoroji"> Dadabhai Naoroji</a></li>
+                    <li><a href="gopal.html" title="Gopal Krishna Gokhale">Gopal Krishna Gokhale</a></li>
+                    <li><a href="bal.html" title="Bala Gangadhar Thilak">Bala Gangadhar Thilak</a></li>
+                    <li><a href="gandhi.html" title="Mahathma Gandhi">Mahatma Gandhi</a></li>
+                </ul>
+            </div>
+        </li>
+        <li><a href="people.html">Legacy & Influence</a></li>
         <li><a href="mki.html">Make In India</a></li>
         <li class="active"><a href="#">References</a></li>
     </ul>
