--- a/bal.html
+++ b/bal.html
@@ -23,9 +23,19 @@
             </div>
         </li>
         <li><a href="people.html">Legacies</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
-    </ul>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
+   </ul>
     </div>
     <h1>Bala Gangadhar Thilak</h1>
    <hr> <img src="bal.jpg" alt="Bala Gangadhar Thilak" id="dada" ><br>
@@ -61,6 +71,10 @@
     <p>In 1895, Tilak founded the Shri Shivaji Fund Committee for the celebration of "Shiv Jayanti", the birth anniversary of Shivaji, the founder of the Maratha Empire. </p>
     <p>The project also had the objective of funding the reconstruction of the tomb (Samadhi) of Shivaji at Raigad Fort.</p>
     <p>For this second objective, Tilak established the Shri Shivaji Raigad Smarak Mandal along with Senapati Khanderao Dabhade II of Talegaon Dabhade, who became the founder President of the Mandal.</p>
+    <div class="footer">
+        <p>Author: Prudhvi</p>
+    </div>
+    
 </body>
 </html>
  
