--- a/dada.html
+++ b/dada.html
@@ -23,8 +23,19 @@
             </div>
         </li>
         <li><a href="people.html">Legacies</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
+       
     </ul>
     </div>
     <h1>Dadabjai Naoroji</h1>
@@ -51,5 +62,9 @@
     <p> He travelled to London in 1855 to become a partner in Cama & Co, opening a Liverpool location for the first Indian company to be established in Britain.</p>
     <p> Within three years, he had resigned on ethical grounds.</p>
     <p> In 1859, he established his own cotton trading company, Dadabhai Naoroji & Co. Later, he became Professor of Gujarati in University College London.</p>
+    <div class="footer">
+        <p>Author: Prudhvi</p>
+    </div>
+    
 </body>
 </html>
