--- a/gandhi.html
+++ b/gandhi.html
@@ -23,8 +23,18 @@
             </div>
         </li>
         <li><a href="people.html">Legacies</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
     </ul>
     </div>
     <h1>Mahathma Gandhi</h1>
@@ -64,7 +74,9 @@
     <p>Gandhi believed that any form of food inescapably harms some form of living organism, but one should seek to understand and reduce the violence in what one consumes because "there is essential unity of all life"</p>
     <p>Beyond his religious beliefs, Gandhi stated another motivation for his experiments with diet.</p>
     <p>He attempted to find the most non-violent vegetarian meal that the poorest human could afford, taking meticulous notes on vegetables and fruits, and his observations with his own body and his ashram in Gujarat. </p>
-   
+    <div class="footer">
+        <p>Author: Prudhvi</p>
+    </div>
 </body>
 </html>
  
