--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
             </div>
         </li>
         <li><a href="people.html">Legacy & Infuence</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
     </ul>
     </div>
     <h1 style="text-align: center; color;">Introduction</h1><br>
@@ -48,7 +58,7 @@
         <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
         <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
     <div class="footer">
-        <p>Creator: Prudhvi</p>
+        <p>Author: Prudhvi</p>
     </div>
     
 </body>
