--- a/people.html
+++ b/people.html
@@ -21,8 +21,18 @@
             </div>
         </li>
         <li class="active"><a href="#">Legacy & Influence</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
     </ul>
     </div>
     <h2 style="padding-top: 10px;">In Popular Media</h2><hr><br>
@@ -30,7 +40,7 @@
     <p style="padding-bottom: 10px;">Satish Kumar, editor of <a href="https://en.wikipedia.org/wiki/Resurgence_%26_Ecologist">Resurgence</a>, has preaching, including a section in his book You Are, Therefore I Am (2002).</p>
     <img src="after.jpg" alt="After swadeshi" style="float: right; padding:10px;">
     <h2>Swadeshi After Independence</h2><hr><br>
-    <p>The "Swadeshi Revolution" of Post-Independence evolved differently from its equivalent in Pre-Independence.</p>
+    <p>The <b>"Swadeshi Revolution"</b> of Post-Independence evolved differently from its equivalent in Pre-Independence.</p>
     <p>The Post-Independence Swadeshi movement arose as a reaction to more authoritarian capitalist policies, while the Pre-Independence movement was primarily a response to colonial policies in the post-Second World War India wanted to keep up with the advanced markets of the west for a country emerging from two decades of colonial injustice.</p>
     <p>Though rapid industrialization was aimed at enabling a self-sufficient India under the framework of the Five-Year Plans, the need to align it with a largely agrarian economy was urgent.</p>
     <p>This need to preserve the old fabric of an agrarian country, while simultaneously modernizing, necessitated a resurgence of a slightly recast "Swadeshi Movement". Forerunners of this resurgent movement were noted journalists, writers, and critics, including S. R. Ramaswamy.</p>
@@ -38,6 +48,11 @@
     <h2>National Handloom Day</h2><hr><br>
     <p>On 7 August 2015, Prime Minister of India, Mr. Narendra Modi, instituted and celebrated the first annual <b>"National Handloom Day of India"</b> to promote indigenous hand loom and khadi products.</p>
     <p style="padding-bottom: 10px;">This date was chosen as on this date in 1905 the proclamation was made to commence the Swadeshi movement to avoid foreign goods and use only Indian-made products in order to rapidly improve the development of India.</p>
+    <p style="font-size: large;"><b>Check out <a href="mki.html">Make In india</a> which is also a legacy of Swadeshi movement</b></p>
+    <div class="footer">
+        <p>Author: Prudhvi</p>
+    </div>
+    
 </body>
 </html>
 
