--- a/timeline.html
+++ b/timeline.html
@@ -22,9 +22,19 @@
         </li>
 
         <li><a href="people.html">Legacy & Influence</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
-    </ul>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
+        </ul>
     </div>
     <br><h2>History</h2><hr>
     <p style="padding-top: 10px;"><strong>1850 to 1904:</strong>Developed by leaders like <Strong>Dadabhai Naoroji, Gopala krishna Gokhale, Bal Gangadhar Thilak</Strong>. This was also known as the first Swadeshi Movement.</p>
@@ -46,6 +56,8 @@
         <p>Feminists like Sarojini Naidu, Pritilata Waddedar, Begum Rokeya promoted the emancipation of Indian women and their participation in national politics.</p>
         <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
         <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
-        
+        <div class="footer">
+            <p>Author: Prudhvi</p>
+        </div>
 </body>
 </html>
