--- a/gopal.html
+++ b/gopal.html
@@ -24,8 +24,18 @@
             </div>
         </li>
         <li><a href="people.html">Legacies</a></li>
-        <li><a href="mki.html">Make In India</a></li>
-        <li><a href="relations.html">References</a></li>
+        <li><a href="mki.html">Make In India</a>
+            <div class="subm">
+                <ul class="l1">
+                    <li><a href="road.html" title="Roads and Highways"> Roads & Highways</a></li>
+                    <li><a href="elec.html" title="Electronics">Electronics System Design</a></li>
+                    <li><a href="auto.html" title="Automotive">Automotive</a></li>
+                    <li><a href="ren.html" title="Renewable Energy">Renewable Energy</a></li>
+                    <li><a href="pharma.html" title="Pharmacy">Pharmaceuticals</a></li>
+                    <li><a href="food.html" title="Food Processing">Food Proccessing</a></li>
+                </ul>
+            </div>
+        </li>
     </ul>
     </div>
     <h1>Gopal Krishna Gokhale</h1>
@@ -53,5 +63,8 @@
     <p>The empirical knowledge coupled with the experience of the representative institutions made Gokhale an outstanding political leader, moderate in ideology and advocacy, a model for the people's representatives.</p>
     <p>His contribution was monumental in shaping the Indian freedom struggle into a quest for building an open society and egalitarian nation.</p>
     <p>Gokhale's achievement must be studied in the context of predominant ideologies and social, economic and political situation at that time, particularly in reference to the famines, revenue policies, wars, partition of Bengal, Muslim League and the split in the Congress at Surat.</p>
+    <div class="footer">
+        <p>Author: Prudhvi</p>
+    </div>
 </body>
 </html>
