--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </p><br>
     <h2 style="padding-left: 15px;">Bengal partition</h2>
     <hr><iframe width="560" height="315" src="https://www.youtube.com/embed/SQAf0tEwdCM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-left:50px; padding-top:30px;"></iframe>
-    <img src="ppb.jpg" alt="movement" id="gandhi" style="box-shadow: 3px 10px #888888"><br>
+    <img src="ppb.jpg" alt="movement" id="gandhi"><br>
     <p style="padding-left: 80px;">Bengal, Bihar, and Orissa had formed a single province of British India since 1765.</p>
     <p> By 1900 the province had grown too large to handle under a single administration.</p>
         <p>East Bengal, because of isolation and poor communications, had been neglected in favour of west Bengal and Bihar.</p>
