--- a/people.html
+++ b/people.html
@@ -38,13 +38,25 @@
     <h2 style="padding-top: 10px;">In Popular Media</h2><hr><br>
     <p>E. F. Schumacher, author of (Small Is Beautiful), was influenced by Gandhi's concept of Swadeshi when he wrote his article on <a href="https://en.wikipedia.org/wiki/Buddhist_economics">Buddhist economics</a>.</p>
     <p style="padding-bottom: 10px;">Satish Kumar, editor of <a href="https://en.wikipedia.org/wiki/Resurgence_%26_Ecologist">Resurgence</a>, has preaching, including a section in his book You Are, Therefore I Am (2002).</p>
-    <img src="after.jpg" alt="After swadeshi" style="float: right; padding:10px;">
     <h2>Swadeshi After Independence</h2><hr><br>
     <p>The <b>"Swadeshi Revolution"</b> of Post-Independence evolved differently from its equivalent in Pre-Independence.</p>
     <p>The Post-Independence Swadeshi movement arose as a reaction to more authoritarian capitalist policies, while the Pre-Independence movement was primarily a response to colonial policies in the post-Second World War India wanted to keep up with the advanced markets of the west for a country emerging from two decades of colonial injustice.</p>
     <p>Though rapid industrialization was aimed at enabling a self-sufficient India under the framework of the Five-Year Plans, the need to align it with a largely agrarian economy was urgent.</p>
     <p>This need to preserve the old fabric of an agrarian country, while simultaneously modernizing, necessitated a resurgence of a slightly recast "Swadeshi Movement". Forerunners of this resurgent movement were noted journalists, writers, and critics, including S. R. Ramaswamy.</p>
     <p style="padding-bottom: 10px;">Later, the movement was joined by an Indian social activist Rajiv Dixit, a famous yoga instructor Swami Ramdev, and a social worker, Pawan Pandit.</p>
+    <h2>Licence raj</h2><hr>
+    <p style="padding-top:10px;">In 1947, India was a new country racked by pains of the Partition and the dire poverty of her people. Nonetheless, the Indian Constitution bestowed the right to vote to every adult, making her the first democracy to guarantee universal adult franchise at birth. The Constitution protected basic personal freedoms of movement, assembly, conscience and expression. So in terms of political and personal freedoms, India was a constitutional republic or a liberal democracy from her birth.  This was a great achievement.</p>
+    <h2 style="padding-left: 30px;">Developments</h2><hr>
+    <img src="after.jpg" alt="After swadeshi" style="float: right; padding:10px;">
+    <ul style="font-family: 'Times New Roman', Times, serif;font-size: 20px;padding-left: 50px;padding-top:10px;text-align: justify;">
+        <li>Industrial Policy Resolution, 1948: government monopoly was established in armaments, atomic energy, railroads, minerals, iron & steel industries, aircraft, manufacturing, ship building and telephone and telegraph equipment</li>
+        <li>Industrial Policy Resolution, 1956: extended the preserve of the government from 17 industries to a further 12 industries.</li>
+        <li>1956: Life Insurance business nationalized</li>
+        <li>1969: Large commercial banks nationalized</li>
+        <li>Monopolies and Restrictive Trade Practices Act, 1970: designed to provide the government with additional information on the structure and investments of all firms with assets of more than Rs 200 million, to strengthen the licensing system. This was done in order to decrease the concentration of private economic power, and to place restraints on business practices considered contrary to public interest.</li>
+        <li>1973: General Insurance business nationalized</li>
+    
+    </ul >
     <h2>National Handloom Day</h2><hr><br>
     <p>On 7 August 2015, Prime Minister of India, Mr. Narendra Modi, instituted and celebrated the first annual <b>"National Handloom Day of India"</b> to promote indigenous hand loom and khadi products.</p>
     <p style="padding-bottom: 10px;">This date was chosen as on this date in 1905 the proclamation was made to commence the Swadeshi movement to avoid foreign goods and use only Indian-made products in order to rapidly improve the development of India.</p>
