--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </div>
         </li>
-        <li><a href="people.html">Legacy & Infuence</a></li>
+        <li><a href="people.html">Legacy & Influence</a></li>
         <li><a href="mki.html">Make In India</a>
             <div class="subm">
                 <ul class="l1">
