--- a/timeline.html
+++ b/timeline.html
@@ -52,7 +52,7 @@
          <p>The last stages of the self-rule struggle from the 1920s was characterized by Congress's adoption of Mohandas Karamchand Gandhi's policy of non-violence and civil disobedience, and several other campaigns.</p>
         <p>Nationalists like Subhash Chandra Bose, Bhagat Singh, Bagha Jatin, Surya Sen preached armed revolution to achieve self-rule.</p>
         <p> Poets and writers such as Rabindranath Tagore, Subramania Bharati, Bankim Chandra Chattopadhyay and Kazi Nazrul Islam used literature, poetry, and speech as a tool for political awareness.</p>
-        <img src="swadeshi.jpg" alt="movement" id="gandhi" style="width: 400px;padding-right: 20px;"><br>
+        <img src="swadeshi.jpg" alt="movement" id="gandhi" style="width: 400px;padding-right: 20px;padding-bottom: 25px;"><br>
         <p>Feminists like Sarojini Naidu, Pritilata Waddedar, Begum Rokeya promoted the emancipation of Indian women and their participation in national politics.</p>
         <p>The Indian self-rule movement was a mass-based movement that encompassed various sections of society. It also underwent a process of constant ideological evolution.</p>
         <p>Although the underlying ideology of the campaign was anti-colonial, it was supported by a vision of independent capitalist economic development coupled with a secular, democratic, republican, and civil-libertarian political structure. </p>
