--- a/dada.html
+++ b/dada.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </li>
-        <li><a href="people.html">Legacies</a></li>
+        <li><a href="people.html">Legacy & Influence</a></li>
         <li><a href="mki.html">Make In India</a>
             <div class="subm">
                 <ul class="l1">
