--- a/gopal.html
+++ b/gopal.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="logo">Swadeshi movement</div>
+    <div class="logo"><a href="index.html" style="text-decoration: none; color: currentColor;">Swadeshi movement</a></div>
     <div class="main">
     
     <ul class="l1">
