--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Swadeshi movement</title>
 </head>
 <body>
-    <div class="logo">Swadeshi movement</div>
+    <div class="logo"><a href="index.html" style="text-decoration: none; color: currentColor;">Swadeshi movement</a></div>
     <div class="main">
     
     <ul class="l1">
